samples/_failures_safe/1761352248_9c877c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_478afbc6.c: In function ‘main’:
./samples/SAFE/__tmp_478afbc6.c:156:21: error: expected ‘;’ at end of input
  156 |             continue
      |                     ^
      |                     ;
./samples/SAFE/__tmp_478afbc6.c:156:13: error: expected declaration or statement at end of input
  156 |             continue
      |             ^~~~~~~~
./samples/SAFE/__tmp_478afbc6.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_478afbc6.c:156:13: error: expected declaration or statement at end of input
